--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id='journal'>
-</div>
+<div id='journal'></div>
 </body>
 <script src="script.js"></script>
 </html>
