--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Eddie Thesis Journal</title>
+	<title>Eddie Kim Thesis Journal</title>
 	<!-- <link rel="stylesheet" href="reset.css"> -->
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<div id='journal'></div>
+	<div id='journal'>
+		<p id='title'>Eddie Kim Thesis Journal</p>
+	</div>
 </body>
 <script src="script.js"></script>
 </html>
