--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div id='journal'>
-		<p id='title'>Eddie Kim Thesis Journal</p>
+		<!-- <p id='title'>Eddie Kim Thesis Journal</p> -->
 	</div>
 </body>
 <script src="script.js"></script>
